Adding new AESBouncyCastle solution The added class Payload just encapsulates both encrypted input and an integer ctLength that contains the length of the plaintext, to be used when decrypting. Similarly it needs an integer when decrypting. Need to ask DNT how they get that done, but its all abstracted beneath this anyway so I'm starting work on other tasks in the meantime.